clase5/np-vote-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-vote-app
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: redis
      ports:
        - protocol: TCP
          #port: 6378 # error
          port: 6379
    - to:
      - namespaceSelector: {}  # Permitir DNS, necesario para la resolución de nombres
      ports:
        - protocol: UDP
          port: 53
